Version 1.13.2+dev:
 * Campaigns:
   * Under the Burning Suns:
     * Updated sprites for Naga Hunter and Naga Guardian line.
 * Language and i18n:
   * Updated translations: British English, Russian, Swedish
 * Miscellaneous and bug fixes:
   * Fix the new log code on Windows to actually use Unicode-aware functions
     in a couple of places so Wesnoth does not quit on startup when trying to
     relocate the log file to a path with Unicode characters (bug #22897,
     definitely fixed this time).
   * Fix bug #23108: exclude aborted attacks from statistics
   * imgcheck now runs on Python 3
   * Fix bug #15259: Secondary click uses control-click instead of command-click in OS X
   * New hi-res icon using new logo for OS X
 * Greatly improved SDL2 support. SDL2 is now the default build.
   * Fix bug #24138: SDL2 crash on resize after starting a game and returning to title screen
   * Fix bug #23908: SDL2 SDL_BlitSurface Causes Crashes
   * Fix bug #23821: Text input is broken in GUI1 under SDL2
   * Fix bug #23820: SDL 2 alpha blending issues
   * Fix bug #23918: UI Graphics in OS X 10.11 El Capitan
   * Fix bug #18112: Color cursor causes slow mouse movement at menus
   * Fix bug #24214: SDL2 build handles fullscreen toggle badly
   * Fix bug #23934: Resize actions are laggy
   

Version 1.13.2:
 * Add-ons client:
   * Warn user if attempting to upload an addon with a version lesser than or
     equal to a published version.
 * Campaigns:
   * Delfador's Memoirs:
     * Added defeat condition for death of the last undead veteran in
       'Showdown in the Northern Swamp' (bug #23668)
   * Eastern Invasion:
     * Fixed scenario events not working right on easy difficulty in 'Captured'.
   * The South Guard:
     * Deoran is now the grandson of the Haldiel in HttT instead.
   * Tutorial:
     * Fixed transition to second scenario.
   * Under the Burning Suns:
     * Gave Garak a new ability called Teaching (at the start of every turn,