@@ -476,6 +476,7 @@ SYNCED_COMMAND_HANDLER_FUNCTION(debug_create_unit, child,  use_undo, /*show*/, e
 	// Add the unit to the board.
 	std::pair<unit_map::iterator, bool> add_result = resources::units->replace(loc, created);
 	resources::screen->invalidate_unit();
+	resources::game_events->pump().fire("unit placed", loc);
 	unit_display::unit_recruited(loc);
 
 	// Village capture?
