@@ -4,6 +4,9 @@ Version 1.13.2+dev:
      * Updated sprites for Naga Hunter and Naga Guardian line.
  * Language and i18n:
    * Updated translations: British English, Russian, Swedish
+ * WML engine:
+   * Added new event "unit placed", which triggers when (and regardless of how)
+     a unit appears on the map.
  * Miscellaneous and bug fixes:
    * Fix the new log code on Windows to actually use Unicode-aware functions
      in a couple of places so Wesnoth does not quit on startup when trying to
